--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Mavo Project</title>
+  <title>RD's Mavo Project</title>
   <script src="https://get.mavo.io/mavo.es5.js"></script>
   <link rel="stylesheet" href="https://get.mavo.io/mavo.css">
 </head>
