--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>RD's Mavo Project</title>
   <script src="https://get.mavo.io/mavo.es5.js"></script>
   <link rel="stylesheet" href="https://get.mavo.io/mavo.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -23,7 +24,9 @@
 	</label>
     </div>
   </section>
-
+<footer>
+  &copy; Rajesh Dhyani
+</footer>
 </body>
 
 </html>
