--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
       <div class="row slider-wrapper">
         <div class="col-md-12">
             <div class="slider-text  slider-text-two">
-              <h2 class="mbr-section-title mbr-fonts-style mbr-bold align-center display-1">Portfolio<span>M4</span>
-              </h2>
-              <h4 class="mbr-text mbr-fonts-style align-center display-7">COMPATIBLE WITH MOBIRISE4 THEME</h4><h4>
+              <h2 class="mbr-section-title mbr-fonts-style mbr-bold align-center display-1">Rajesh&nbsp;<span>Dhyani</span></h2>
+              <h4 class="mbr-text mbr-fonts-style align-center display-7">Welcome to my portfolio page</h4><h4>
             </h4></div>
         </div>
       </div>
@@ -106,7 +105,7 @@
         <div class="row align-items-center content-row">
           <div class="col-lg-6 wrap-block">
               <h2 class="mbr-section-title mbr-fonts-style mbr-light mbr-white display-2">ABOUT ME</h2>
-              <h3 class="mbr-section-subtitle mbr-fonts-style mbr-light mbr-white display-5">I AM A WEB DESIGNER</h3>
+              <h3 class="mbr-section-subtitle mbr-fonts-style mbr-light mbr-white display-5">I AM A DESIGN LEADER</h3>
               <p class="mbr-text mbr-fonts-style mbr-light mbr-white display-7">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque atque architecto delectus nisi perspiciatis exercitationem doloribus ex quis a, facere nulla, laboriosam nemo iusto maxime velit optio magnam minus amet. Molestiae maxime laborum incidunt ea sed provident tempora modi inventore recusandae consectetur impedit numquam ut expedita ratione repellendus ullam minus, itaque non sapiente ipsum perspiciatis! Saepe, officia. Recusandae est, pariatur!</p>
             
             <div class="social-media col-md-12 col-sm-12">
@@ -329,7 +328,7 @@
         <div class="row justify-content-center">
             <div class="form-1 col-md-8 col-sm-12" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XpvCbKdyLhgVtD8W+jsRfORFf4qc8JIPzTpVodIs5mUPy18lBtPLLPAkXyf8OG6d+m0m+z92VX507g4cnre6BKG9xetP9pZ35nIJYZc0lRbV69n6431evqG9y0v+P0Hl.ONedZQyZtmEN1vjDgi9WiXEdr/VfwBn3TOJ3o482wstGuD2d5mS0K2CcE7ydiM5kTswtKwnyAslPRfor9XOsobZVMsdV8+53RWQg4EV8flxkDbxCOayVO1G2Pgdk0fMG">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YK9eRo1iMq/7/tCJOgE+SzYMRCuc4TjGuShNOq46HmfVTSii6pUuQ17W9R01x0UsKjJJ0pH3K1aPPXjkqpVKA7o1MdU84lsozovPuohEsZQ2nuErejnfquMfP2JQy6qL.BTc91xeOorJhMW5kIz0HRiA3svaLKmG08jCeovjiAh//xN6cIzN1LSZkmY7NOW8z3lZlLmS7/wk0r84GPkYALw89Rdny5PAQZ/LQyNcj5oWS3SnDrdC3uxeueikjcVQw">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
